<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/darker_gray">

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="36dp"/>

    <TextView
        android:id="@+id/deviceName"
        android:layout_below="@id/status"
        android:layout_width="match_parent"
        android:layout_height="36dp"/>

    <LinearLayout
        android:id="@+id/dataArea"
        android:layout_width="match_parent"
        android:layout_height="362dp"
        android:layout_below="@id/deviceName"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/accel_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/accel" />

        <LinearLayout
            android:id="@+id/accel_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accel_label"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_x" />

            <TextView
                android:id="@+id/accel_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:text="@string/emptyText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_y" />

            <TextView
                android:id="@+id/accel_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:text="@string/emptyText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_z" />

            <TextView
                android:id="@+id/accel_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:text="@string/emptyText" />

        </LinearLayout>

        <TextView
            android:id="@+id/bvp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/accel_area"
            android:layout_marginTop="10dp"
            android:text="@string/bvp_label" />

        <TextView
            android:id="@+id/bvp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bvp_label"
            android:text="@string/emptyText" />

        <TextView
            android:id="@+id/eda_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bvp"
            android:layout_marginTop="10dp"
            android:text="@string/eda_label" />

        <TextView
            android:id="@+id/eda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eda_label"
            android:text="@string/emptyText" />

        <TextView
            android:id="@+id/ibi_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eda"
            android:layout_marginTop="10dp"
            android:text="@string/ibi_label" />

        <TextView
            android:id="@+id/ibi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ibi_label"
            android:text="@string/emptyText" />

        <TextView
            android:id="@+id/temp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ibi"
            android:layout_marginTop="10dp"
            android:text="@string/temp_label" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temp_label"
            android:text="@string/emptyText" />

        <TextView
            android:id="@+id/battery_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temperature"
            android:layout_marginTop="10dp"
            android:text="@string/battery_label" />

        <TextView
            android:id="@+id/battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/battery_label"
            android:text="@string/emptyText" />

        <TextView
            android:id="@+id/wrist_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wrist_status_label"
            android:text="@string/emptyText" />

        <Button
            android:id="@+id/disconnectButton"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="STOP STREAMING" />

    </LinearLayout>

</LinearLayout>
